move IntSummaryTest to ExceptionPath